feat: add base method calls